# XBTVEd

./: .gitignore  Cargo.toml  LICENSE  README.md
gui/: test.c  xbtved.h
gui/XBTVEd/: XBTVEd.pro  font.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  xbtved.cpp  xbtved.h
src/: action.rs  blocks.rs  gui.rs  lib.rs  main.rs  program.rs  schedule.rs  tags.rs  test.rs
src/gui/: editor.rs  menu.rs  mod.rs
src/parse/: mod.rs  tokenize.rs  translate.rs
