[package]

name = "XBTVEd"
version = "0.0.1"
authors = ["Dominick Allen <dominick.allen1989@gmail.com>"]

[[bin]]

name = "XBTVEd"

[dependencies.chrono]
version = "0.2.10"

[dependencies.conrod]
git = "https://github.com/PistonDevelopers/conrod.git"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"
