[package]

name = "XBTVEd"
version = "0.0.1"
authors = ["Dominick Allen <dominick.allen1989@gmail.com>"]

[[bin]]

name = "XBTVEd"

crate-type = ["dylib"]

[dependencies.regex]
regex = "0.1.28"

[dependencies.chrono]
version = "0.2.10"

[dependencies.conrod]
git = "https://github.com/PistonDevelopers/conrod/"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston/"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath.git"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window.git"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"
